--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,9 @@
 # dependencies
 /node_modules
 
-/backend/images/*
+/backend/images/
+# exception to the rule
+!/backend/images/.gitkeep
 
 # profiling files
 chrome-profiler-events*.json
